# 3D-Render-Engineer

./: .gitignore  CMakeLists.txt  CMakeLists_Init.txt  config.h.in
Project/: glad.c
Project/1-framework/1.1-get-start/: CMakeLists.txt  main.cpp
Project/1-framework/1.2-get-Application/: CMakeLists.txt  main.cpp
Project/1-framework/1.3-use-shader/: CMakeLists.txt  main.cpp
Project/1-framework/1.4-use-texture/: CMakeLists.txt  main.cpp
Project/1-framework/1.5-use-camera/: CMakeLists.txt  main.cpp
Project/1-framework/1.6-event-callback/: CMakeLists.txt  main.cpp
Project/1-framework/1.7-model-framwork/: CMakeLists.txt  main.cpp
Project/1-framework/frame_test/: CMakeLists.txt  main.cpp
Project/2-read-objfile/obj_test/: CMakeLists.txt  main.cpp
Project/3-light/3.1-set-light/: CMakeLists.txt  main.cpp
Project/3-light/3.10-Scene-IMGUI/: CMakeLists.txt  main.cpp
Project/3-light/3.11-PBR/: CMakeLists.txt  main.cpp
Project/3-light/3.12-PBR-Heart/: CMakeLists.txt  main.cpp  main_1.cpp  main_11_11.cpp
Project/3-light/3.13-Blinn-Phong-Heart/: CMakeLists.txt  main.cpp  main_11_12.cpp
Project/3-light/3.2-duophy/: CMakeLists.txt  main.cpp
Project/3-light/3.3-Materials/: CMakeLists.txt  main.cpp
Project/3-light/3.4-Demo/: CMakeLists.txt  main.cpp
Project/3-light/3.5-SpecularMask/: CMakeLists.txt  main.cpp
Project/3-light/3.6-dotLight/: CMakeLists.txt  main.cpp
Project/3-light/3.7-spotLight/: CMakeLists.txt  main.cpp
Project/3-light/3.8-MultiLight/: CMakeLists.txt  main.cpp
Project/3-light/3.9-LightArray/: CMakeLists.txt  main.cpp
Project/4-Advanced/4.1-Depth-test/: CMakeLists.txt  main.cpp
Project/4-Advanced/4.2-Stencil-test/: CMakeLists.txt  main.cpp
Project/4-Advanced/4.3-Color-Blending/: CMakeLists.txt  main.cpp
Project/4-Advanced/4.4-PBR-Blend/: CMakeLists.txt  main(1).cpp  main.cpp
Project/4-Advanced/4.5-Phong-Blend/: CMakeLists.txt  main.cpp
Project/4-Advanced/4.6-FBO/: CMakeLists.txt  main.cpp
Project/4-Advanced/4.7-OIT/: CMakeLists.txt  main.cpp
include/: hello.h
include/Application/: Application.h  assimpLoader.h
include/camera/: camera.h  cameraControl.h
include/camera/cameraControl/: gameCameraControl.h  trackBallCameraControl.h
include/camera/cameraType/: othographicCamera.h  perspectiveCamera.h
include/glframework/: core.h  geometry.h  mesh.h  object.h  scene.h  shader.h  texture.h
include/glframework/light/: ambientLight.h  directionalLight.h  light.h  pointLight.h  spotLight.h
include/glframework/material/: DepthMaterial.h  PBRMaterial.h  material.h  phongMaterial.h  screenMaterial.h  whiteMaterial.h
include/glframework/renderer/: renderer.h
include/glframework/tools/: tools.h
include/wrapper/: checkError.h
resource/Textures/Pangmao/: Pangmao.blend  tripo_convert_93b83061-5961-4610-804a-174c1c3da338.mtl
resource/shaders/1.7-model-framwork/: fragment.glsl
resource/shaders/3.1-set-light/: 1_fragment_diffuse.glsl  1_vertex_diffuse.glsl  2_fragment_dir.glsl  2_vertex_dir.glsl  3.1_fragment_specular_Light_spot.glsl  3_fragment_specular.glsl  4_fragment_ambient.glsl
resource/shaders/3.3-Materials/: phong.frag  phong.vert
resource/shaders/3.9-LightArray/: LightArray.frag
resource/shaders/4-Advanced/: fragmentShader_DepthTest.frag  vertexShader.vert
resource/shaders/4-Advanced/PBRBlend/: PBR-VTK.frag  fragmentShader.frag  vertexShader.vert
resource/shaders/4-Advanced/PhongBlend/: fragmentShader.frag
resource/shaders/4-Advanced/normalshader/: fragment.glsl  vertex.glsl
resource/shaders/4-Advanced/oit/: PBRBlend.frag  PBRBlend.vert  PhongBlend.frag  PhongBlend.vert  composite.frag  composite.vert
resource/shaders/4-Advanced/screenShader/: screen.frag  screen.vert
resource/shaders/Blinn-Phong/: Blinn-phong-Light-encapsulation.frag  Blinn-phong-pointL.frag  Blinn-phong-spotL-encapsulation.frag  Blinn-phong-spotL.frag  Blinn-phong.frag
resource/shaders/Canvas/: fragment.glsl  vertex.glsl
resource/shaders/PBR-Light/: Blinn-phong-dot-direct.frag  Blinn-phong-point-direct.frag  PBR-VTK.frag  PBR-all.frag  PBR-jinglian.frag  PBR-jinglian_1.frag  PBR-jinglian_2.frag  PBR-simplify.frag  Phong.frag
resource/shaders/camera/: fragment.glsl
resource/shaders/triangle/: fragment.glsl  vertex.glsl
resource/shaders/whiteShader/: white.frag  white.vert
src/: CMakeLists.txt  hello.cpp
src/Application/: Application.cpp  assimpLoader.cpp
src/camera/: camera.cpp  cameraControl.cpp
src/camera/cameraControl/: gameCameraControl.cpp  trackBallCameraControl.cpp
src/camera/cameraType/: othographicCamera.cpp  perspectiveCamera.cpp
src/glframework/: geometry.cpp  mesh.cpp  object.cpp  shader.cpp  texture.cpp
src/glframework/light/: ambientLight.cpp  directionalLight.cpp  light.cpp  pointLight.cpp  spotLight.cpp
src/glframework/material/: DepthMaterial.cpp  PBRMaterial.cpp  material.cpp  phongMaterial.cpp  screenMaterial.cpp
src/glframework/renderer/: renderer.cpp
src/glframework/tools/: tools.cpp
src/imgui/: imgui_impl_sdl2.cpp
src/wrapper/: checkError.cpp
